--- a/app/views/admin/supergroups/edit.html.erb
+++ b/app/views/admin/supergroups/edit.html.erb
@@ -10,5 +10,7 @@
     <%= render 'admin/shared/breadcrumbs', crumbs: crumbs %>
 
     <%= render 'admin/supergroups/shared/form', url: admin_supergroup_path, method: :put %>
+
+    <%= render 'admin/shared/confirm_delete_modal', modal_title: 'გსურთ ქვეკორპუსის წაშლა?', modal_text: 'ქვეკორპუსი წაიშლება სრულად' %>
   </div>
 <main>
