--- a/app/views/admin/text_blocks/edit_multiple.html.erb
+++ b/app/views/admin/text_blocks/edit_multiple.html.erb
@@ -303,5 +303,8 @@
 
     </div>
 
+    <%= render 'admin/shared/confirm_delete_modal', modal_title: 'გსურთ ტექსტური ბლოკის წაშლა?',
+                                                    modal_text: 'ეს ტექტური ბლოკი წაიშლება სრულად' %>
+
   </div>
 </main>
