--- a/app/views/admin/text_blocks/index.html.erb
+++ b/app/views/admin/text_blocks/index.html.erb
@@ -124,5 +124,9 @@
       </div>
     </div>
     <%= render 'admin/shared/paging', records: @text_blocks, url_method: -> (**params){ admin_text_blocks_path(**params) }, paging_params: { collection_id: @collection&.id } %>
+
+    <%= render 'admin/shared/confirm_delete_modal', modal_title: 'გსურთ ტექსტური წყვილების წაშლა?',
+                                                    modal_text: 'ყველა ტექტური წყვილი ამ კრებულში წაიშლება სრულად' %>
+
   </div>
 </main>
