Add search highlight

--- a/app/views/admin/collections/index.html.erb
+++ b/app/views/admin/collections/index.html.erb
@@ -54,7 +54,7 @@
     <div class="px-4 sm:px-6 lg:px-8">
       <div class="flow-root">
         <div class="-mx-4 -my-2 sm:-mx-6 lg:-mx-8">
-          <div class="inline-block min-w-full py-2 align-middle">
+          <div data-controller="search-highlight" class="inline-block min-w-full py-2 align-middle">
             <%= form_for @search, url: admin_collections_path, method: :get do |form| %>
               <table class="w-full border-separate border-spacing-0">
                 <thead>
@@ -80,7 +80,7 @@
                                       { content: @text_blocks_count, classes: 'max-w[100px] py-3.5' },
                                       { input_type: :submit, classes: 'max-w[100px] py-2 text-left text-sm text-gray-500' }] %>
                 </thead>
-                <tbody>
+                <tbody data-search-highlight-target="body">
                   <% @collections.each_with_index do |collection, index| %>
                     <%= render 'admin/shared/table/row',
                                record: collection,
