--- a/app/views/admin/supergroups/index.html.erb
+++ b/app/views/admin/supergroups/index.html.erb
@@ -9,7 +9,7 @@
     <div class="px-4 sm:px-6 lg:px-8">
       <div class="flow-root">
         <div class="-mx-4 -my-2 sm:-mx-6 lg:-mx-8">
-          <div class="inline-block min-w-full py-2 align-middle">
+          <div data-controller="search-highlight" class="inline-block min-w-full py-2 align-middle">
             <%= form_for @search, url: admin_supergroups_path, method: :get do |form| %>
               <table class="w-full border-separate border-spacing-0 border-gray-300">
                 <thead>
@@ -37,7 +37,7 @@
 
 
                 </thead>
-                <tbody>
+                <tbody data-search-highlight-target="body">
                   <% @supergroups.each_with_index do |supergroup, index| %>
                     <%= render 'admin/shared/table/row',
                                record: supergroup,
