--- a/app/views/admin/supergroups/index.html.erb
+++ b/app/views/admin/supergroups/index.html.erb
@@ -5,7 +5,7 @@
 
     <%= render 'admin/shared/new_button', name: 'ახალი ქვეკორპუსის დამატება', url: new_admin_supergroup_path %>
 
-    <%= render 'admin/shared/paging', records: @supergroups, url_method: -> (**params){ admin_supergroups_path(**params) }, paging_params: {} %>
+    <%= render 'admin/shared/paging', records: @supergroups, url_method: -> (**params){ admin_supergroups_path(**params) }, paging_params: {}.merge(@search.attributes) %>
     <div class="px-4 sm:px-6 lg:px-8">
       <div class="flow-root">
         <div class="-mx-4 -my-2 sm:-mx-6 lg:-mx-8">
@@ -64,6 +64,6 @@
         </div>
       </div>
     </div>
-    <%= render 'admin/shared/paging', records: @supergroups, url_method: -> (**params){ admin_supergroups_path(**params) }, paging_params: {} %>
+    <%= render 'admin/shared/paging', records: @supergroups, url_method: -> (**params){ admin_supergroups_path(**params) }, paging_params: {}.merge(@search.attributes) %>
   </div>
 </main>
