--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -13,7 +13,7 @@
     <div class="px-4 sm:px-6 lg:px-8">
       <div class="flow-root">
         <div class="-mx-4 -my-2 sm:-mx-6 lg:-mx-8">
-          <div class="inline-block min-w-full py-2 align-middle">
+          <div data-controller="search-highlight" class="inline-block min-w-full py-2 align-middle">
             <%= form_for @search, url: admin_genres_path, method: :get do |form| %>
               <table class="w-full border-separate border-spacing-0 border-gray-300">
                 <thead>
@@ -33,15 +33,22 @@
 
 
                 </thead>
-                <tbody>
+                <tbody data-search-highlight-target="body">
                   <% @genres.each_with_index do |genre, index| %>
-                    <%= render 'admin/shared/table/row',
+                    <%= render 'admin/shared/table/simple_row',
                                record: genre,
                                index: index,
-                               columns: [{ type: :text, name: :id, classes: 'font-medium text-gray-900 py-4 px-3' },
-                                         { type: :text, name: :name_ka, classes: "max-w-[240px] overflow-hidden text-gray-500 py-4 px-3" },
-                                         { type: :text, name: :name_en, classes: "max-w-[240px] overflow-hidden text-gray-500 py-4 px-3" },
-                                         { type: :link, name: :edit, url_method: -> (**params){ edit_admin_genre_path(**params) }, url_params: { id: genre.id }, classes: "font-medium text-gray-500" }] %>
+                               columns: { uid: true,
+                                          edit_url_method: -> (**params){ edit_admin_genre_path(**params) },
+                                          edit_url_params: { id: genre.id },
+                                          delete_url_method: -> (record){ admin_genre_path(record) },
+                                          delete_redirect_url_method: admin_genres_path,
+                                          delete_modal_title: 'გსურთ ჟანრის წაშლა?',
+                                          delete_modal_text: 'ეს ჟანრი წაიშლება სრულად',
+                                          name_ka: true,
+                                          name_en: true,
+                                          edit: true,
+                                          delete: true } %>
 
                   <% end %>
                 </tbody>
@@ -52,5 +59,8 @@
       </div>
     </div>
     <%= render 'admin/shared/paging', records: @genres, url_method: -> (**params){ admin_genres_path(**params) }, paging_params: {}.merge(@search.attributes) %>
+
+    <%= render 'admin/shared/confirm_delete_modal', modal_title: 'გსურთ ჟანრის წაშლა?',
+                                                      modal_text: 'ეს ჟანრი წაიშლება სრულად' %>
   </div>
 </main>
